force-app/main/default/objects/Savings_Account_Transaction__c/Savings_Account_Transaction__c.object-meta.xml
<CustomObject>
    <label>Savings Account Transaction</label>
    <nameField>
        <displayFormat>SAT-{000000}</displayFormat>
        <label>Savings Account Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Savings Account Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>