force-app/main/default/objects/Savings_Account_Transaction__c/fields/Email_Content__c.field-meta.xml
<CustomField>
    <fullName>Email_Content__c</fullName>
    <label>Email Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>