force-app/main/default/objects/Savings_Account_Transaction__c/fields/IMPS_Referene__c.field-meta.xml
<CustomField>
    <fullName>IMPS_Referene__c</fullName>
    <label>IMPS Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>