force-app/main/default/objects/Savings_Account_Transaction__c/fields/Paid_To__c.field-meta.xml
<CustomField>
    <fullName>Paid_To__c</fullName>
    <label>Paid To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>