force-app/main/default/objects/Savings_Account_Transaction__c/fields/Savings_Account__c.field-meta.xml
<CustomField>
    <fullName>Savings_Account__c</fullName>
    <label>Savings Account</label>
    <referenceTo>Savings_Account__c</referenceTo>
    <relationshipName>Expenditures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>