force-app/main/default/objects/Savings_Account_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Balance__c</columns>
    <columns>Data_Source__c</columns>
    <columns>IMPS_Referene__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Savings_Account__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>